Fix Bug: Close button in notebooks not visible in Mobiles

--- a/css/notebook.css
+++ b/css/notebook.css
@@ -21,7 +21,7 @@
 	color: #fff;
 	position:absolute;
 	top:10px;
-	right:10px;
+	left:10px;
 	cursor: pointer;
 }
 .container{
